--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 cache:
   directories:
     - node_modules
+branches:
+  only:
+    - master
 notifications:
   email: false
 node_js:
@@ -12,6 +15,7 @@ before_script:
   - npm prune
 script:
   - npm run test:single
+  - npm run build
 after_success:
   - npm run report-coverage
   - npm run semantic-release
