--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "thrux",
   "version": "0.0.0-development",
   "description": "Simple state management.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "commit": "git-cz ",
     "test": "jest --coverage --watch",
     "test:single": "jest --coverage",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "prebuild": "rimraf dist",
+    "build": "npm-run-all --parallel build:*",
+    "build:main": "babel --out-dir dist src",
+    "build:umd": "webpack --output-filename index.umd.js",
+    "build:umd.min": "webpack --output-filename index.umd.min.js -p"
   },
   "repository": {
     "type": "git",
@@ -27,17 +32,37 @@
   "homepage": "https://github.com/Thram/thrux#readme",
   "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-jest": "^18.0.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-register": "^6.18.0",
     "codecov.io": "^0.1.6",
     "commitizen": "^2.9.5",
     "cz-conventional-changelog": "^1.2.0",
     "ghooks": "^2.0.0",
     "jest": "^18.1.0",
-    "semantic-release": "^6.3.2"
+    "npm-run-all": "^4.0.1",
+    "rimraf": "^2.5.4",
+    "semantic-release": "^6.3.2",
+    "umd": "^3.0.1",
+    "webpack": "^1.14.0"
   },
   "czConfig": {
-    "path": "node_modules/cz-conventional-changelog"
+    "path": "./node_modules/cz-conventional-changelog"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-2"
+    ]
   },
   "jest": {
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    },
     "coverageThreshold": {
       "global": {
         "branches": 100,
