--- a/.gitignore
+++ b/.gitignore
@@ -91,5 +91,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-.gitignore
 .idea/
+.DS_Store
