--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "thrux",
   "version": "0.0.0-development",
   "description": "Simple state management.",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "commit": "git add . && git-cz",
     "test": "jest --coverage --watch",
@@ -10,6 +10,7 @@
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "prebuild": "rimraf dist",
+    "copy": "cp package.json dist/ && cp README.md dist/",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --out-dir dist src",
     "build:umd": "webpack --output-filename thrux.umd.js",
