--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Examples for react-thrux",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -w",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thram <thramposo@gmail.com> (https://thram.github.io/)",
