--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ node_js:
 before_script:
   - npm prune
 script:
-  - npm run test:single
+  - npm run cover
   - npm run build
 after_success:
   - npm run report-coverage
