--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   "dependencies": {
     "css-loader": "^0.26.1",
     "lodash": "^4.17.4",
+    "marked": "^0.3.6",
+    "prismjs": "^1.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-thrux": "^1.2.2",
     "sass-loader": "^5.0.1",
-    "showdown": "^1.6.4",
-    "showdown-highlight": "^1.0.0",
     "style-loader": "^0.13.1",
     "thrux": "^2.4.1",
     "thrux-logger": "^1.0.3"
