--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "report": "nyc report --reporter=lcov",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "precommit": "npm run cover",
     "prebuild": "rimraf dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --out-dir dist src",
@@ -39,16 +40,16 @@
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.1",
+    "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.23.0",
     "codecov.io": "^0.1.6",
-    "commitizen": "^2.9.5",
-    "cz-conventional-changelog": "^1.2.0",
-    "ghooks": "^2.0.0",
-    "npm-run-all": "^4.0.1",
+    "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.0.0",
+    "husky": "^0.13.1",
+    "npm-run-all": "^4.0.2",
     "nyc": "^10.1.2",
-    "rimraf": "^2.5.4",
+    "rimraf": "^2.6.1",
     "semantic-release": "^6.3.2",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
@@ -58,10 +59,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    },
-    "ghooks": {
-      "pre-commit": "npm run cover"
+      "path": "cz-conventional-changelog"
     }
   }
 }
