--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "commit": "git add . && git-cz",
     "tape": "tape-watch -r babel-register __test__/thrux.test.js",
     "cover": "nyc npm run test:single",
-    "test": "npm run tape -- -p | tap-spec --color",
-    "test:single": "npm run tape -- --once -p | tap-spec --color",
+    "lint": "eslint src --ext .jsx,.js",
+    "test": "npm run lint && npm run tape -- -p | faucet",
+    "test:single": "npm run lint && npm run tape -- --once -p | faucet",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "report": "nyc report --reporter=lcov",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
@@ -41,20 +42,24 @@
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.24.0",
     "codecov.io": "^0.1.6",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
+    "eslint": "^3.17.1",
+    "eslint-config-walmart": "^1.1.1",
+    "eslint-plugin-filenames": "^1.1.0",
+    "faucet": "^0.0.1",
     "husky": "^0.13.2",
     "npm-run-all": "^4.0.2",
     "nyc": "^10.1.2",
     "rimraf": "^2.6.1",
     "semantic-release": "^6.3.2",
-    "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
-    "tape-watch": "^2.2.4",
+    "tape-watch": "^2.3.0",
     "umd": "^3.0.1",
     "webpack": "^2.2.1"
   },
