--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "tape": "tape-watch -r babel-register __test__/thrux.test.js",
     "cover": "nyc npm run test:single",
     "lint": "eslint src --ext .jsx,.js",
+    "lint:test": "eslint __test__ --ext .js",
     "test": "npm run lint && npm run tape -- -p | faucet",
     "test:single": "npm run lint && npm run tape -- --once -p | faucet",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
@@ -50,8 +51,12 @@
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
     "eslint": "^3.17.1",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-config-walmart": "^1.1.1",
     "eslint-plugin-filenames": "^1.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.2",
     "faucet": "^0.0.1",
     "husky": "^0.13.2",
     "npm-run-all": "^4.0.2",
