--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
     "url": "https://github.com/Thram/thrux/issues"
   },
   "homepage": "https://github.com/Thram/thrux#readme",
-  "dependencies": {
+  "peerDependencies": {
     "es6-promise": "^4.1.0",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.24.0",
@@ -52,11 +52,10 @@
     "cz-conventional-changelog": "^2.0.0",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
-    "eslint-config-walmart": "^1.1.1",
     "eslint-plugin-filenames": "^1.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.2",
+    "eslint-plugin-react": "^6.10.3",
     "faucet": "^0.0.1",
     "husky": "^0.13.2",
     "npm-run-all": "^4.0.2",
@@ -66,7 +65,7 @@
     "tape": "^4.6.3",
     "tape-watch": "^2.3.0",
     "umd": "^3.0.1",
-    "webpack": "^2.2.1"
+    "webpack": "^2.3.1"
   },
   "config": {
     "commitizen": {
