--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ node_js:
   - '4'
 before_script:
   - npm prune
+  - npm install es6-promise lodash
 script:
   - npm run cover
   - npm run build
