--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "precommit": "npm run cover",
     "prebuild": "rimraf dist",
+    "dependencies": "npm install es6-promise lodash",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --out-dir dist src",
     "build:umd": "webpack --output-filename thrux.umd.js",
@@ -43,7 +44,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.0",
+    "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.24.0",
@@ -57,7 +58,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "faucet": "^0.0.1",
-    "husky": "^0.13.2",
+    "husky": "^0.13.3",
     "npm-run-all": "^4.0.2",
     "nyc": "^10.1.2",
     "rimraf": "^2.6.1",
@@ -65,7 +66,7 @@
     "tape": "^4.6.3",
     "tape-watch": "^2.3.0",
     "umd": "^3.0.1",
-    "webpack": "^2.3.1"
+    "webpack": "^2.3.2"
   },
   "config": {
     "commitizen": {
