--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "gitc": "git add . && git-cz",
-    "tape": "tape-watch -r babel-register __test__/thrux.test.js",
+    "tape": "tape-watch -r babel-register __test__/*.test.js",
     "cover": "nyc npm run test:single",
     "lint": "eslint src --ext .jsx,.js",
     "lint:test": "eslint __test__ --ext .js",
@@ -19,8 +19,8 @@
     "dependencies": "npm install es6-promise lodash",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --out-dir dist src",
-    "build:umd": "webpack --output-filename thrux.umd.js",
-    "build:umd.min": "webpack --output-filename thrux.umd.min.js -p"
+    "build:umd": "webpack",
+    "build:umd.min": "webpack -p --env.prod"
   },
   "repository": {
     "type": "git",
