--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "precommit": "npm run cover",
     "prebuild": "rimraf dist",
-    "dependencies": "npm install es6-promise lodash",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --out-dir dist src",
     "build:umd": "webpack",
@@ -38,9 +37,7 @@
   },
   "homepage": "https://github.com/Thram/thrux#readme",
   "dependencies": {
-    "es6-promise": "^4.1.0"
-  },
-  "peerDependencies": {
+    "es6-promise": "^4.1.0",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
