--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   },
   "homepage": "https://github.com/Thram/thrux#readme",
   "dependencies": {
-    "es6-promise": "^4.1.0",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
@@ -45,12 +44,13 @@
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.24.0",
     "codecov.io": "^0.1.6",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
-    "eslint": "^3.18.0",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-filenames": "^1.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -59,13 +59,13 @@
     "faucet": "^0.0.1",
     "husky": "^0.13.3",
     "npm-run-all": "^4.0.2",
-    "nyc": "^10.1.2",
+    "nyc": "^10.2.0",
     "rimraf": "^2.6.1",
     "semantic-release": "^6.3.2",
     "tape": "^4.6.3",
     "tape-watch": "^2.3.0",
     "umd": "^3.0.1",
-    "webpack": "^2.3.2"
+    "webpack": "^2.3.3"
   },
   "config": {
     "commitizen": {
